--- a/cv.html
+++ b/cv.html
@@ -1,38 +1,50 @@
 <!doctype html>
-<html lang="fr">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ALYAS LTD — CV</title>
+    <title>CV</title>
+    <link rel="icon" type="image/png" href="assets/img/icon.png">
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
     <div class="wrapper">
       <div class="layout">
         <aside class="sidebar">
-          <img class="photo" src="assets/img/photo.jpg" alt="Photo de ALYAS LTD">
-          <h2>À propos</h2>
-          <p>Ceci est mon CV. Téléchargeable ci-dessous et consultable en ligne.</p>
+          <img class="photo" src="assets/img/photo.jpg" alt="Photo de Alya ZOUZOU">
+          <h2>My resume</h2>
+          <p>This is my Resume. Downloadable and viewable online.</p>
         </aside>
 
         <section class="right">
-          <div class="site-name">ALYAS LTD</div>
+          <div class="site-name">
+          Alya ZOUZOU
+          <span class="socials">
+            <a href="https://github.com/alyasltd" target="_blank" aria-label="GitHub">
+              <img src="assets/img/github.svg" alt="GitHub">
+            </a>
+            <a href="https://www.linkedin.com/in/alya-zouzou-827655255/" target="_blank" aria-label="LinkedIn">
+              <img src="assets/img/linkedin.svg" alt="LinkedIn">
+            </a>
+            <a href="https://scholar.google.com/citations?user=TON_ID" target="_blank" aria-label="Google Scholar">
+              <img src="assets/img/scholar.svg" alt="Google Scholar">
+            </a>
+          </span>
+        </div>
 
           <nav aria-label="Navigation principale">
             <a class="nav-link" href="index.html">About</a>
             <a class="nav-link active" href="cv.html" aria-current="page">CV</a>
             <a class="nav-link" href="code.html">Code</a>
             <a class="nav-link" href="research.html">Research interests</a>
-            <a class="nav-link" href="publications.html">Publications</a>
+            <a class="nav-link" href="publications.html">Publications and posters</a>
             <a class="nav-link" href="blog/index.html">Blog</a>
             <a class="nav-link" href="contact.html">Contact</a>
           </nav>
 
           <main class="content">
-            <h1>CV</h1>
-            <div class="card">
-              <p><a href="assets/cv.pdf">Télécharger le CV (PDF)</a></p>
-            </div>
+            <p><a href="assets/cv.pdf">Download resume (PDF)</a></p>
+      
             <div class="card">
               <iframe src="assets/cv.pdf" style="width:100%;height:75vh;border:1px solid var(--border);border-radius:12px"></iframe>
             </div>
@@ -40,8 +52,8 @@
 
           <footer>
             <div class="inner">
-              <div>© <script>document.write(new Date().getFullYear())</script> ALYAS LTD</div>
-              <div>Propulsé par GitHub Pages</div>
+              <div>© <script>document.write(new Date().getFullYear())</script> Alya ZOUZOU </div>
+              <div>Made with GitHub Pages</div>
             </div>
           </footer>
         </section>
