--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<html lang="fr">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ALYAS LTD — About</title>
+    <link rel="icon" type="image/png" href="assets/img/icon.png">
+    <title>About</title>
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
@@ -11,31 +12,73 @@
       <div class="layout">
         <!-- Colonne gauche -->
         <aside class="sidebar">
-          <img class="photo" src="assets/img/photo.jpg" alt="Photo de ALYAS LTD">
-          <h2>À propos</h2>
-          <p>Bonjour ! Je suis <strong>ALYAS LTD</strong>. Ce site rassemble mon CV, mon code, mes intérêts de recherche et mes publications.</p>
-          <p>Basé à … • Intérêt: Data, IA, Web.</p>
+          <img class="photo" src="assets/img/photo.jpg" alt="Photo de Alya ZOUZOU">
+          <h2>About me </h2>
+          <p class="location">
+          <span>📍</span> Paris, France
+          </p>
+          <p>Hey there ! Thanks for visiting my page.</p>
+          <p>Here are a few fun facts about me:</p>
+          <ul class="fun-facts">
+          <li>I love football, I support <strong>Real Madrid</strong> and <strong>Marseille</strong>.</li>
+          <li>I’m a big anime fan, my favorites are <strong>Attack on Titan</strong> and <strong>Jujutsu Kaisen</strong>.</li>
+          <li>I’ve never been skiing 🏔️ but I dream of climbing <strong>Mont Blanc</strong>.</li>
+          <li>I’ve traveled to <strong>Greece</strong>, <strong>Spain</strong>, <strong>the USA</strong>, <strong>Algeria</strong>, <strong>England</strong>, <strong>Italy</strong>, and <strong>Turkey</strong>.</li>
+          <li>Before my first year of university, I knew <em>nothing</em> about coding — and yet, here I am!</li>
+        </ul>
         </aside>
 
         <!-- Colonne droite -->
         <section class="right">
-          <div class="site-name">ALYAS LTD</div>
+          <div class="site-name">
+          Alya ZOUZOU
+          <span class="socials">
+            <a href="https://github.com/alyasltd" target="_blank" aria-label="GitHub">
+              <img src="assets/img/github.svg" alt="GitHub">
+            </a>
+            <a href="https://www.linkedin.com/in/alya-zouzou-827655255/" target="_blank" aria-label="LinkedIn">
+              <img src="assets/img/linkedin.svg" alt="LinkedIn">
+            </a>
+            <a href="https://scholar.google.com/citations?user=TON_ID" target="_blank" aria-label="Google Scholar">
+              <img src="assets/img/scholar.svg" alt="Google Scholar">
+            </a>
+          </span>
+        </div>
 
           <nav aria-label="Navigation principale">
             <a class="nav-link active" href="index.html" aria-current="page">About</a>
             <a class="nav-link" href="cv.html">CV</a>
             <a class="nav-link" href="code.html">Code</a>
             <a class="nav-link" href="research.html">Research interests</a>
-            <a class="nav-link" href="publications.html">Publications</a>
+            <a class="nav-link" href="publications.html">Publications and posters</a>
             <a class="nav-link" href="blog/index.html">Blog</a>
             <a class="nav-link" href="contact.html">Contact</a>
           </nav>
 
           <main class="content">
-            <h1>Bienvenue</h1>
-            <div class="card">
-              <p>Voici ma page d’accueil. Mises à jour récentes, missions, conférences, et autres annonces peuvent apparaître ici.</p>
-            </div>
+            <h1>Hi ! </h1>
+            <p>
+            I am <strong>Alya Zouzou</strong>, a recent graduate with a Master’s in Mathematics & Computer Science from the Université Paul Valéry Montpellier III, 
+            supervised by Dr. Mélanie Ducoffe.
+            My work focused on <em>Trustworthy AI for Autonomous Systems</em>, with projects in <strong>pose estimation</strong>, <strong>object detection</strong>, 
+            and <strong>conformal prediction</strong>.
+            </p>
+
+            <p>
+            I previously interned at <strong>Airbus AI Research</strong> in Toulouse,
+            where I worked on computer vision, uncertainty quantification and data engineering tasks bridging AI theory and real-world deployment. I also interned at
+            <strong>PwC</strong> in the Data & Analytics division.</p>
+
+            <p>
+            My research interests revolve around <strong>vision-language models</strong>, <strong>computer vision</strong>, 
+            and <strong>fairness / robustness</strong> in AI systems, with particular interest in <em>pose estimation</em>, 
+            <em>active learning</em>, and <em>causal reasoning</em> for <strong>autonomous and medical applications</strong>.
+            </p>
+
+            <p>
+            I am currently seeking <strong>PhD or research assistant opportunities</strong> in these areas, 
+            where I can advance reliable, transparent, and efficient perception systems.
+            </p>
 
             <div class="card">
               <h2>Compétences</h2>
@@ -45,8 +88,8 @@
 
           <footer>
             <div class="inner">
-              <div>© <script>document.write(new Date().getFullYear())</script> ALYAS LTD</div>
-              <div>Propulsé par GitHub Pages</div>
+              <div>© <script>document.write(new Date().getFullYear())</script> Alya ZOUZOU </div>
+              <div>Made with GitHub Pages</div>
             </div>
           </footer>
         </section>
