--- a/publications.html
+++ b/publications.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ALYAS LTD — Publications</title>
+    <title>Publications</title>
+    <link rel="icon" type="image/png" href="assets/img/icon.png">
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
@@ -16,14 +17,27 @@
         </aside>
 
         <section class="right">
-          <div class="site-name">ALYAS LTD</div>
+          <div class="site-name">
+          Alya ZOUZOU
+          <span class="socials">
+            <a href="https://github.com/alyasltd" target="_blank" aria-label="GitHub">
+              <img src="assets/img/github.svg" alt="GitHub">
+            </a>
+            <a href="https://www.linkedin.com/in/alya-zouzou-827655255/" target="_blank" aria-label="LinkedIn">
+              <img src="assets/img/linkedin.svg" alt="LinkedIn">
+            </a>
+            <a href="https://scholar.google.com/citations?user=TON_ID" target="_blank" aria-label="Google Scholar">
+              <img src="assets/img/scholar.svg" alt="Google Scholar">
+            </a>
+          </span>
+        </div>
 
           <nav aria-label="Navigation principale">
             <a class="nav-link" href="index.html">About</a>
             <a class="nav-link" href="cv.html">CV</a>
             <a class="nav-link" href="code.html">Code</a>
             <a class="nav-link" href="research.html">Research interests</a>
-            <a class="nav-link active" href="publications.html" aria-current="page">Publications</a>
+            <a class="nav-link active" href="publications.html" aria-current="page">Publications and posters</a>
             <a class="nav-link" href="blog/index.html">Blog</a>
             <a class="nav-link" href="contact.html">Contact</a>
           </nav>
@@ -40,8 +54,8 @@
 
           <footer>
             <div class="inner">
-              <div>© <script>document.write(new Date().getFullYear())</script> ALYAS LTD</div>
-              <div>Propulsé par GitHub Pages</div>
+              <div>© <script>document.write(new Date().getFullYear())</script> Alya ZOUZOU </div>
+              <div>Made with GitHub Pages</div>
             </div>
           </footer>
         </section>
