--- a/code.html
+++ b/code.html
@@ -1,55 +1,62 @@
 <!doctype html>
-<html lang="fr">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ALYAS LTD — Code</title>
+    <title>Code</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" type="image/png" href="assets/img/icon.png">
   </head>
   <body>
     <div class="wrapper">
       <div class="layout">
         <!-- Colonne gauche : marge large, photo + texte -->
         <aside class="sidebar">
-          <img class="photo" src="assets/img/photo.jpg" alt="Photo de ALYAS LTD">
-          <h2>Mes projets</h2>
-          <p>Repos publics, projets en cours et archives. La liste ci-dessous se met à jour automatiquement depuis GitHub.</p>
-          <p class="muted">Astuce : renomme/étoile tes repos importants pour qu’ils restent en haut.</p>
+          <img class="photo" src="assets/img/photo.jpg" alt="Photo de Alya ZOUZOU">
+          <h2>My projects</h2>
+          <p>Public repos, ongoing projects, and archives. The list updates automatically from GitHub.</p>
         </aside>
 
         <!-- Colonne droite : nom, nav, contenu -->
         <section class="right">
-          <div class="site-name">ALYAS LTD</div>
+          <div class="site-name">
+          Alya ZOUZOU
+          <span class="socials">
+            <a href="https://github.com/alyasltd" target="_blank" aria-label="GitHub">
+              <img src="assets/img/github.svg" alt="GitHub">
+            </a>
+            <a href="https://www.linkedin.com/in/alya-zouzou-827655255/" target="_blank" aria-label="LinkedIn">
+              <img src="assets/img/linkedin.svg" alt="LinkedIn">
+            </a>
+            <a href="https://scholar.google.com/citations?user=TON_ID" target="_blank" aria-label="Google Scholar">
+              <img src="assets/img/scholar.svg" alt="Google Scholar">
+            </a>
+          </span>
+        </div>
 
           <nav aria-label="Navigation principale">
             <a class="nav-link" href="index.html">About</a>
             <a class="nav-link" href="cv.html">CV</a>
             <a class="nav-link active" href="code.html" aria-current="page">Code</a>
             <a class="nav-link" href="research.html">Research interests</a>
-            <a class="nav-link" href="publications.html">Publications</a>
+            <a class="nav-link" href="publications.html">Publications and posters</a>
             <a class="nav-link" href="blog/index.html">Blog</a>
             <a class="nav-link" href="contact.html">Contact</a>
           </nav>
 
           <main class="content">
-            <h1>Repos GitHub</h1>
 
-            <p>Voici la liste de mes dépôts publics sur GitHub :</p>
-        
-
-            <!-- Conteneur où on va injecter les cards -->
             <div id="repos" class="grid cols-2">
-              <!-- Fallback qui s'affiche pendant le chargement -->
               <div class="card">
-                <h3><a href="https://github.com/alyasltd?tab=repositories" target="_blank" rel="noopener">Voir tous mes dépôts sur GitHub</a></h3>
-                <p class="muted">Chargement…</p>
+                <h3><a href="https://github.com/alyasltd?tab=repositories" target="_blank" rel="noopener">See all my GitHub repos</a></h3>
+                <p class="muted">Loading…</p>
               </div>
             </div>
 
             <noscript>
               <div class="card">
-                <p>JavaScript est désactivé — consulte directement
-                  <a href="https://github.com/alyasltd?tab=repositories" target="_blank" rel="noopener">mes dépôts sur GitHub</a>.
+                <p>JavaScript is disabled — please check
+                  <a href="https://github.com/alyasltd?tab=repositories" target="_blank" rel="noopener">my repos on GitHub</a>.
                 </p>
               </div>
             </noscript>
@@ -57,8 +64,8 @@
 
           <footer>
             <div class="inner">
-              <div>© <script>document.write(new Date().getFullYear())</script> ALYAS LTD</div>
-              <div>Propulsé par GitHub Pages</div>
+              <div>© <script>document.write(new Date().getFullYear())</script> Alya ZOUZOU </div>
+              <div>Made with GitHub Pages</div>
             </div>
           </footer>
         </section>
@@ -84,7 +91,7 @@
           '<span class="badge">★ ' + (repo.stargazers_count || 0) + '</span>';
 
         var dateBadge =
-          '<span class="badge">MAJ: ' +
+          '<span class="badge">Last modified: ' +
           new Date(repo.updated_at).toLocaleDateString() +
           '</span>';
 
