--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <p>Hey there ! Thanks for visiting my page.</p>
           <p>Here are a few fun facts about me:</p>
           <ul class="fun-facts">
-          <li>I love football, I support <strong>Real Madrid</strong> and <strong>Marseille</strong>.</li>
+          <li>I love football !!</li>
           <li>I’m a big anime fan, my favorites are <strong>Attack on Titan</strong> and <strong>Jujutsu Kaisen</strong>.</li>
           <li>I’ve never been skiing 🏔️ but I dream of climbing <strong>Mont Blanc</strong>.</li>
           <li>I’ve traveled to <strong>Greece</strong>, <strong>Spain</strong>, <strong>the USA</strong>, <strong>Algeria</strong>, <strong>England</strong>, <strong>Italy</strong>, and <strong>Turkey</strong>.</li>
@@ -80,10 +80,89 @@
             where I can advance reliable, transparent, and efficient perception systems.
             </p>
 
-            <div class="card">
-              <h2>Compétences</h2>
-              <p><span class="badge">Python</span><span class="badge">JavaScript</span><span class="badge">Data</span><span class="badge">ML</span></p>
-            </div>
+            <div class="news-section">
+            <h2>News</h2>
+            <ul class="timeline">
+
+              <li>
+                <span class="date">September 2025</span>
+                <p>Presented my COPA paper at <strong>COPA London</strong> and paper accepted at <strong>DASC 2025</strong>.</p>
+                <p class="links">
+                  [<a href="https://arxiv.org/abs/2505.16740" target="_blank">paper</a>] 
+                  [<a href="https://github.com/alyasltd/conformal_runway_detection" target="_blank">code</a>] 
+                  [<a href="https://example.com/dasc2025-slides.pdf" target="_blank">slides</a>] 
+                  [<a href="https://example.com/dasc2025-poster.pdf" target="_blank">poster</a>]
+                </p>
+              </li>
+
+              <li>
+                <span class="date">July 2025</span>
+                <p>Presented my COPA work at <strong>ANITI Toulouse</strong>.</p>
+                <p class="links">
+                  [<a href="https://arxiv.org/abs/2505.16740" target="_blank">paper</a>] 
+                  [<a href="https://github.com/alyasltd/conformal_runway_detection" target="_blank">code</a>] 
+                  [<a href="https://example.com/aniti2025-slides.pdf" target="_blank">slides</a>] 
+                  [<a href="https://example.com/aniti2025-poster.pdf" target="_blank">poster</a>]
+                </p>
+              </li>
+
+              <li>
+                <span class="date">May 2025</span>
+                <p>Paper accepted at <strong>COPA 2025</strong>: <em>Robust Vision-Based Runway Detection through Conformal Prediction and Conformal mAP.</em></p>
+                <p class="links">
+                  [<a href="https://arxiv.org/abs/2505.16740" target="_blank">arXiv</a>] 
+                  [<a href="https://github.com/alyasltd/conformal_runway_detection" target="_blank">code</a>] 
+                  [<a href="https://example.com/copa2025-slides.pdf" target="_blank">slides</a>] 
+                  [<a href="https://example.com/copa2025-poster.pdf" target="_blank">poster</a>]
+                </p>
+              </li>
+
+              <li>
+                <span class="date">September 2024</span>
+                <p>Began final research internship at <strong>Airbus AI Research</strong>, supervised by <strong>Dr. Mélanie Ducoffe</strong>.</p>
+              </li>
+
+              <li>
+                <span class="date">August 2024</span>
+                <p>Graduated with a <strong>Master’s in Mathematics & Computer Science</strong> from Université Paul Valéry Montpellier III.</p>
+              </li>
+
+              <li>
+                <span class="date">July 2024</span>
+                <p>Presented my PFIA 2024 paper <em>INM-Explain – Explaining Medical Controversies: Application to the Case of Non-Drug Interventions.</em></p>
+                <p class="links">
+                  [<a href="https://pfia2024.univ-lr.fr/assets/files/Journ%C3%A9es-Sant%C3%A9-et-IA/ias2024_paper_9.pdf" target="_blank">paper</a>] 
+                  [<a href="http://advanse.lirmm.fr/controverse/html/contact.html" target="_blank">project page</a>] 
+                  [<a href="https://github.com/alyasltd/INM-Explain" target="_blank">code</a>] 
+                  [<a href="https://example.com/pfia2024-slides.pdf" target="_blank">slides</a>] 
+                  [<a href="https://example.com/pfia2024-poster.pdf" target="_blank">poster</a>]
+                </p>
+              </li>
+
+              <li>
+                <span class="date">May 2024</span>
+                <p>Paper accepted at <strong>PFIA 2024</strong>.</p>
+                <p class="links">
+                  [<a href="https://pfia2024.univ-lr.fr/assets/files/Journ%C3%A9es-Sant%C3%A9-et-IA/ias2024_paper_9.pdf" target="_blank">paper</a>] 
+                  [<a href="http://advanse.lirmm.fr/controverse/html/contact.html" target="_blank">project page</a>] 
+                  [<a href="https://github.com/alyasltd/INM-Explain" target="_blank">code</a>] 
+                  [<a href="https://example.com/pfia2024-slides.pdf" target="_blank">slides</a>] 
+                  [<a href="https://example.com/pfia2024-poster.pdf" target="_blank">poster</a>]
+                </p>
+              </li>
+
+              <li>
+                <span class="date">September 2023</span>
+                <p>Started my <strong>Master’s in Mathematics & Computer Science</strong> and apprenticeship at <strong>Airbus Aircraft</strong>.</p>
+              </li>
+
+              <li>
+                <span class="date">April–August 2023</span>
+                <p>Intern at <strong>PwC</strong> — Data & Analytics division.</p>
+              </li>
+
+            </ul>
+          </div>
           </main>
 
           <footer>
