--- a/publications.html
+++ b/publications.html
@@ -7,31 +7,35 @@
     <link rel="icon" type="image/png" href="assets/img/icon.png">
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
+
   <body>
     <div class="wrapper">
       <div class="layout">
+        <!-- Sidebar -->
         <aside class="sidebar">
-          <img class="photo" src="assets/img/photo.jpg" alt="Photo de ALYAS LTD">
+          <img class="photo" src="assets/img/photo.jpg" alt="Photo de Alya ZOUZOU">
           <h2>Info</h2>
-          <p>Liste sélective avec liens DOI/PDF.</p>
+          <p>Selective list with paper, poster, and code links.</p>
         </aside>
 
+        <!-- Main content -->
         <section class="right">
           <div class="site-name">
-          Alya ZOUZOU
-          <span class="socials">
-            <a href="https://github.com/alyasltd" target="_blank" aria-label="GitHub">
-              <img src="assets/img/github.svg" alt="GitHub">
-            </a>
-            <a href="https://www.linkedin.com/in/alya-zouzou-827655255/" target="_blank" aria-label="LinkedIn">
-              <img src="assets/img/linkedin.svg" alt="LinkedIn">
-            </a>
-            <a href="https://scholar.google.com/citations?user=TON_ID" target="_blank" aria-label="Google Scholar">
-              <img src="assets/img/scholar.svg" alt="Google Scholar">
-            </a>
-          </span>
-        </div>
+            Alya ZOUZOU
+            <span class="socials">
+              <a href="https://github.com/alyasltd" target="_blank" aria-label="GitHub">
+                <img src="assets/img/github.svg" alt="GitHub">
+              </a>
+              <a href="https://www.linkedin.com/in/alya-zouzou-827655255/" target="_blank" aria-label="LinkedIn">
+                <img src="assets/img/linkedin.svg" alt="LinkedIn">
+              </a>
+              <a href="https://scholar.google.com/citations?user=TON_ID" target="_blank" aria-label="Google Scholar">
+                <img src="assets/img/scholar.svg" alt="Google Scholar">
+              </a>
+            </span>
+          </div>
 
+          <!-- Navigation -->
           <nav aria-label="Navigation principale">
             <a class="nav-link" href="index.html">About</a>
             <a class="nav-link" href="cv.html">CV</a>
@@ -42,14 +46,38 @@
             <a class="nav-link" href="contact.html">Contact</a>
           </nav>
 
+          <!-- Publications -->
           <main class="content">
-            <h1>Publications</h1>
+            <h1>Publications & Posters</h1>
+
             <div class="card">
-              <ol>
-                <li><strong>ALYAS LTD</strong>, Co-auteur (2025). <em>Titre de l’article</em>. Journal X. <a href="#">doi:xx.xxxx/xxxx</a></li>
-                <li><strong>ALYAS LTD</strong> (2024). <em>Titre</em>. Conférence Y. <a href="#">PDF</a></li>
-              </ol>
+              <h2>2025</h2>
+              <p>
+                <strong>ZOUZOU, A.</strong>, et al. (2025). 
+                <em>Robust Vision-Based Runway Detection through Conformal Prediction and Conformal mAP.</em>  
+                In <strong>Proceedings of Machine Learning Research</strong>, pp. 266:1–20.  
+                <br>Presented at <strong>Conformal and Probabilistic Prediction with Applications (COPA 2025)</strong>, London, UK.  
+                <br>
+                [<a href="https://arxiv.org/abs/2505.16740" target="_blank">Paper (arXiv)</a>] 
+                [<a href="https://github.com/alyasltd/conformal_runway_detection" target="_blank">Code</a>] 
+                [<a href="https://example.com/copa2025-presentation.pdf" target="_blank">Presentation</a>]
+              </p>
             </div>
+
+            <div class="card">
+              <h2>2024</h2>
+              <p>
+                <strong>ZOUZOU, A.</strong>, et al. (2024). 
+                <em>INM-Explain – Explaining Medical Controversies: Application to the Case of Non-Drug Interventions.</em>  
+                Presented at <strong>Health and AI Day @ PFIA 2024</strong>, La Rochelle, France (1 July 2024).  
+                <br>
+                [<a href="https://pfia2024.univ-lr.fr/assets/files/Journ%C3%A9es-Sant%C3%A9-et-IA/ias2024_paper_9.pdf" target="_blank">Paper (PFIA Proceedings)</a>] 
+                [<a href="http://advanse.lirmm.fr/controverse/html/contact.html" target="_blank">Project Page</a>] 
+                [<a href="https://github.com/alyasltd/INM-Explain" target="_blank">Code</a>] 
+                [<a href="https://example.com/pfia2024-presentation.pdf" target="_blank">Presentation</a>]
+              </p>
+            </div>
+
           </main>
 
           <footer>
