--- a/research.html
+++ b/research.html
@@ -43,15 +43,35 @@
           </nav>
 
           <main class="content">
-            <h1>Research interests</h1>
-            <div class="card">
-              <ul>
-                <li><strong>Sujet 1</strong> — description courte…</li>
-                <li><strong>Sujet 2</strong> — description courte…</li>
-                <li><strong>Sujet 3</strong> — description courte…</li>
-              </ul>
-            </div>
-          </main>
+  <h1>Research Interests</h1>
+
+  <p>
+    I’m broadly interested in how we can make AI systems that <strong>see, reason, and act</strong> more like humans — models that are <em>robust, fair, and aware of their own uncertainty</em>. 
+    My focus lies at the intersection of <strong>computer vision</strong>, <strong>vision–language models</strong> (VLMs), and <strong>robotics</strong>.
+  </p>
+
+  <p>
+    My previous work explored <strong>conformal prediction</strong>, <strong>object detection</strong>, and <strong>pose estimation</strong>, 
+    under the supervision of <strong>Dr. Mélanie Ducoffe</strong>. 
+    I also gained experience at <strong>PwC</strong> and <strong>Airbus AI Research</strong>, where I developed a deeper interest in 
+    <strong>uncertainty quantification</strong> and <strong>trustworthy perception</strong> in real-world AI systems.
+  </p>
+
+  <p>
+    I’m particularly drawn to problems involving <strong>vision–language reasoning</strong>, 
+    <strong>fairness and robustness</strong> in perception models, 
+    and <strong>active or causal learning</strong> for <strong>autonomous systems</strong>. 
+    I find inspiration in robotics and medical AI applications, 
+    where understanding context and reliability is crucial.
+  </p>
+
+  <p>
+    My goal is to pursue a <strong>PhD</strong> or <strong>research assistantship</strong> 
+    focused on developing <em>multimodal perception systems</em> 
+    that combine vision, language, and reasoning — 
+    making them not only accurate, but <strong>aware, interpretable, and dependable</strong>.
+  </p>
+</main>
 
           <footer>
             <div class="inner">
