--- a/index.html
+++ b/index.html
@@ -86,12 +86,27 @@
 
               <li>
                 <span class="date">September 2025</span>
-                <p>Presented my COPA paper at <strong>COPA London</strong> and paper accepted at <strong>DASC 2025</strong>.</p>
+                <p>Paper <em>LARD 2.0: Enhanced Dataset and Benchmarking for Autonomous Landing Systems</em> accepted and presented at <strong>DASC 2025</strong>.</p>
+                <p class="links">
+                  [<a href="https://huggingface.co/datasets/DEEL-AI/LARD_V2" target="_blank">code</a>] 
+                </p>
+              </li>
+
+              <li>
+                <span class="date">September 2025</span>
+                <p>Presented my COPA paper at <strong>COPA London</strong>.</p>
                 <p class="links">
                   [<a href="https://arxiv.org/abs/2505.16740" target="_blank">paper</a>] 
                   [<a href="https://github.com/alyasltd/conformal_runway_detection" target="_blank">code</a>] 
                   [<a href="https://example.com/dasc2025-slides.pdf" target="_blank">slides</a>] 
-                  [<a href="https://example.com/dasc2025-poster.pdf" target="_blank">poster</a>]
+                </p>
+              </li>
+
+              <li>
+                <span class="date">August 2025</span>
+                <p>Graduated with a <strong>Master’s in Mathematics & Computer Science</strong> from Université Paul Valéry Montpellier III.</p>
+                <p class="links">
+                  [<a href="#" target="_blank">Master Thesis</a>]
                 </p>
               </li>
 
@@ -99,10 +114,7 @@
                 <span class="date">July 2025</span>
                 <p>Presented my COPA work at <strong>ANITI Toulouse</strong>.</p>
                 <p class="links">
-                  [<a href="https://arxiv.org/abs/2505.16740" target="_blank">paper</a>] 
-                  [<a href="https://github.com/alyasltd/conformal_runway_detection" target="_blank">code</a>] 
                   [<a href="https://example.com/aniti2025-slides.pdf" target="_blank">slides</a>] 
-                  [<a href="https://example.com/aniti2025-poster.pdf" target="_blank">poster</a>]
                 </p>
               </li>
 
@@ -111,9 +123,7 @@
                 <p>Paper accepted at <strong>COPA 2025</strong>: <em>Robust Vision-Based Runway Detection through Conformal Prediction and Conformal mAP.</em></p>
                 <p class="links">
                   [<a href="https://arxiv.org/abs/2505.16740" target="_blank">arXiv</a>] 
-                  [<a href="https://github.com/alyasltd/conformal_runway_detection" target="_blank">code</a>] 
-                  [<a href="https://example.com/copa2025-slides.pdf" target="_blank">slides</a>] 
-                  [<a href="https://example.com/copa2025-poster.pdf" target="_blank">poster</a>]
+                  [<a href="https://github.com/alyasltd/conformal_runway_detection" target="_blank">code</a>]
                 </p>
               </li>
 
@@ -122,20 +132,14 @@
                 <p>Began final research internship at <strong>Airbus AI Research</strong>, supervised by <strong>Dr. Mélanie Ducoffe</strong>.</p>
               </li>
 
-              <li>
-                <span class="date">August 2024</span>
-                <p>Graduated with a <strong>Master’s in Mathematics & Computer Science</strong> from Université Paul Valéry Montpellier III.</p>
-              </li>
 
               <li>
                 <span class="date">July 2024</span>
                 <p>Presented my PFIA 2024 paper <em>INM-Explain – Explaining Medical Controversies: Application to the Case of Non-Drug Interventions.</em></p>
                 <p class="links">
                   [<a href="https://pfia2024.univ-lr.fr/assets/files/Journ%C3%A9es-Sant%C3%A9-et-IA/ias2024_paper_9.pdf" target="_blank">paper</a>] 
-                  [<a href="http://advanse.lirmm.fr/controverse/html/contact.html" target="_blank">project page</a>] 
                   [<a href="https://github.com/alyasltd/INM-Explain" target="_blank">code</a>] 
                   [<a href="https://example.com/pfia2024-slides.pdf" target="_blank">slides</a>] 
-                  [<a href="https://example.com/pfia2024-poster.pdf" target="_blank">poster</a>]
                 </p>
               </li>
 
@@ -146,8 +150,6 @@
                   [<a href="https://pfia2024.univ-lr.fr/assets/files/Journ%C3%A9es-Sant%C3%A9-et-IA/ias2024_paper_9.pdf" target="_blank">paper</a>] 
                   [<a href="http://advanse.lirmm.fr/controverse/html/contact.html" target="_blank">project page</a>] 
                   [<a href="https://github.com/alyasltd/INM-Explain" target="_blank">code</a>] 
-                  [<a href="https://example.com/pfia2024-slides.pdf" target="_blank">slides</a>] 
-                  [<a href="https://example.com/pfia2024-poster.pdf" target="_blank">poster</a>]
                 </p>
               </li>
 
