--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <p class="links">
                   [<a href="https://arxiv.org/abs/2505.16740" target="_blank">paper</a>] 
                   [<a href="https://github.com/alyasltd/conformal_runway_detection" target="_blank">code</a>] 
-                  [<a href="https://example.com/dasc2025-slides.pdf" target="_blank">slides</a>] 
+                  [<a href="assets/doc/slides/COPA2025.pdf" target="_blank">slides</a>] 
                 </p>
               </li>
 
@@ -106,7 +106,8 @@
                 <span class="date">August 2025</span>
                 <p>Graduated with a <strong>Master’s in Mathematics & Computer Science</strong> from Université Paul Valéry Montpellier III.</p>
                 <p class="links">
-                  [<a href="#" target="_blank">Master Thesis</a>]
+                  [<a href="assets/doc/master/alyaZOUZOUmasterThesis.pdf" target="_blank">Master Thesis</a>]
+                  [<a href="assets/doc/master/SoutenanceALYAbis.pdf" target="_blank">slides</a>]
                 </p>
               </li>
 
@@ -114,7 +115,8 @@
                 <span class="date">July 2025</span>
                 <p>Presented my COPA work at <strong>ANITI Toulouse</strong>.</p>
                 <p class="links">
-                  [<a href="https://example.com/aniti2025-slides.pdf" target="_blank">slides</a>] 
+                  [<a href="assets/doc/slides/COPA2025.pdf" target="_blank">slides</a>] 
+                  
                 </p>
               </li>
 
@@ -139,7 +141,7 @@
                 <p class="links">
                   [<a href="https://pfia2024.univ-lr.fr/assets/files/Journ%C3%A9es-Sant%C3%A9-et-IA/ias2024_paper_9.pdf" target="_blank">paper</a>] 
                   [<a href="https://github.com/alyasltd/INM-Explain" target="_blank">code</a>] 
-                  [<a href="https://example.com/pfia2024-slides.pdf" target="_blank">slides</a>] 
+                  [<a href="assets/doc/slides/inm.pdf" target="_blank">slides</a>] 
                 </p>
               </li>
 
