--- a/research.html
+++ b/research.html
@@ -11,9 +11,7 @@
     <div class="wrapper">
       <div class="layout">
         <aside class="sidebar">
-          <img class="photo" src="assets/img/photo.jpg" alt="Photo de ALYAS LTD">
-          <h2>Résumé</h2>
-          <p>Mes axes principaux et collaborations.</p>
+          <img class="photo" src="assets/img/photo.jpg" alt="Photo de Alya ZOUZOU">
         </aside>
 
         <section class="right">
