--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h1>Hi ! </h1>
             <p>
             I am <strong>Alya Zouzou</strong>, a recent graduate with a Master’s in Mathematics & Computer Science from the Université Paul Valéry Montpellier III, 
-            supervised by Dr. Mélanie Ducoffe.
+            supervised by <a href="https://scholar.google.com/citations?user=jqG6J-AAAAAJ&hl=en" target="_blank">Dr. Mélanie Ducoffe</a>.
             My work focused on <em>Trustworthy AI for Autonomous Systems</em>, with projects in <strong>pose estimation</strong>, <strong>object detection</strong>, 
             and <strong>conformal prediction</strong>.
             </p>
